--- a/css/style.css
+++ b/css/style.css
@@ -185,4 +185,15 @@ smart section
   margin-bottom: .8rem;
 }
 
-.smart-item {}
+/* ===================================
+designed section
+==================================== */
+.designed-section {
+  padding-bottom: 100px;
+}
+
+.designed-bg img {
+  position: relative;
+  bottom: 0;
+  left: -80px;
+}
