--- a/css/style.css
+++ b/css/style.css
@@ -196,4 +196,12 @@ designed section
   position: relative;
   bottom: 0;
   left: -80px;
+  width: 100%;
+}
+
+/* ===================================
+app section
+==================================== */
+.app-section {
+  margin: 100px 0;
 }
