--- a/css/style.css
+++ b/css/style.css
@@ -296,3 +296,7 @@ pricing section
 .underline:hover {
   text-decoration: underline;
 }
+
+/* ===================================
+testimonial section
+==================================== */
