--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ pricing section
 }
 
 /* ===================================
-testimonial section
+faq section
 ==================================== */
 .accordion-button {
   background: #F5F7FA;
